SERVER-5473 mongostat will not auth unless passed a username or password

Signed-off-by: Spencer T Brody <spencer@10gen.com>